--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -41,6 +41,9 @@
 	color: #070707 !important;
 	background-color: #bcbcbc69 !important;
 }
+.wrapper{
+	padding-top: 4% !important;
+}
 @media (max-width: 736px) {
 	.navbar-center{
 		width: 100% !important
@@ -54,5 +57,8 @@
 	#search_field{
 		width: 100% !important;
 		padding-top: 10px;
+	}
+	.wrapper{
+		padding-top:25% !important;
 	}
 }
