Added php controller

--- a/assets/css/plans.css
+++ b/assets/css/plans.css
@@ -1,103 +1,67 @@
-.panel
-{
-		text-align: center;
-}
-.panel:hover { box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4), 0 1px 5px rgba(130, 130, 130, 0.35); }
-.panel-body
-{
-		padding: 0px;
-		text-align: center;
-}
+      .big-lead {
+        font-size: 40px;
+      }
 
-.the-price
-{
-		background-color: rgba(220,220,220,.17);
-		box-shadow: 0 1px 0 #dcdcdc, inset 0 1px 0 #fff;
-		padding: 20px;
-		margin: 0;
-}
+      .price-panel,
+      .price-panel > .panel-heading {
+        -webkit-transition: all .3s ease;
+        -moz-transition: all .3s ease;
+        -o-transition: all .3s ease;
+        transition: all .3s ease;
+      }
 
-.the-price h1
-{
-		line-height: 1em;
-		padding: 0;
-		margin: 0;
-}
+      .price-panel:hover {
+        box-shadow: 0 0 30px rgba(0,0,0, .2);
+      }
+      .price-panel:hover > .panel-heading {
+        box-shadow: 0 0 30px rgba(0,0,0, .2) inset;
+      }
 
-.subscript
-{
-		font-size: 25px;
-}
+      .price-panel > .panel-heading {
+        color: white;
+        text-shadow: 0 3px 0 rgba(50,50,50, .6);
+        border-radius: 0;
+        box-shadow: 0 5px 0 rgba(50,50,50, .2) inset;
+      }
+      .price-panel > .panel-body {
+        color: white;
+        text-shadow: 0 3px 0 rgba(50,50,50, .3);
+      }
+      .price-panel > .list-group {
+        font-weight: 600;
+      }
+      .price-panel > .panel-footer {
+        box-shadow: 0 3px 0 rgba(0,0,0, .3);
+      }
 
-/* CSS-only ribbon styles    */
-.cnrflash
-{
-		/*Position correctly within container*/
-		position: absolute;
-		top: -9px;
-		right: 4px;
-		z-index: 1; /*Set overflow to hidden, to mask inner square*/
-		overflow: hidden; /*Set size and add subtle rounding      to soften edges*/
-		width: 100px;
-		height: 100px;
-		border-radius: 3px 5px 3px 0;
-}
-.cnrflash-inner
-{
-		/*Set position, make larger then      container and rotate 45 degrees*/
-		position: absolute;
-		bottom: 0;
-		right: 0;
-		width: 145px;
-		height: 145px;
-		-ms-transform: rotate(45deg); /* IE 9 */
-		-o-transform: rotate(45deg); /* Opera */
-		-moz-transform: rotate(45deg); /* Firefox */
-		-webkit-transform: rotate(45deg); /* Safari and Chrome */
-		-webkit-transform-origin: 100% 100%; /*Purely decorative effects to add texture and stuff*/ /* Safari and Chrome */
-		-ms-transform-origin: 100% 100%;  /* IE 9 */
-		-o-transform-origin: 100% 100%; /* Opera */
-		-moz-transform-origin: 100% 100%; /* Firefox */
-		background-image: linear-gradient(90deg, transparent 50%, rgba(255,255,255,.1) 50%), linear-gradient(0deg, transparent 0%, rgba(1,1,1,.2) 50%);
-		background-size: 4px,auto, auto,auto;
-		background-color: #aa0101;
-		box-shadow: 0 3px 3px 0 rgba(1,1,1,.5), 0 1px 0 0 rgba(1,1,1,.5), inset 0 -1px 8px 0 rgba(255,255,255,.3), inset 0 -1px 0 0 rgba(255,255,255,.2);
-}
-.cnrflash-inner:before, .cnrflash-inner:after
-{
-		/*Use the border triangle trick to make         it look like the ribbon wraps round it's        container*/
-		content: " ";
-		display: block;
-		position: absolute;
-		bottom: -16px;
-		width: 0;
-		height: 0;
-		border: 8px solid #800000;
-}
-.cnrflash-inner:before
-{
-		left: 1px;
-		border-bottom-color: transparent;
-		border-right-color: transparent;
-}
-.cnrflash-inner:after
-{
-		right: 0;
-		border-bottom-color: transparent;
-		border-left-color: transparent;
-}
-.cnrflash-label
-{
-		/*Make the label look nice*/
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		display: block;
-		width: 100%;
-		padding-bottom: 5px;
-		color: #fff;
-		text-shadow: 0 1px 1px rgba(1,1,1,.8);
-		font-size: 0.95em;
-		font-weight: bold;
-		text-align: center;
-}
+      .panel-grey > .panel-heading {
+        background-color: #6d6d6d;
+        border-color: #b7b7b7;
+      }
+      .panel-grey > .panel-body {
+        background-color: #808080;
+      }
+
+      .panel-blue > .panel-heading {
+        background-color: #608bb4;
+        border-color: #78aee1;
+      }
+      .panel-blue > .panel-body {
+        background-color: #73a3d4;
+      }
+
+      .panel-green > .panel-heading {
+        background-color: #57ac57;
+        border-color: #71df71;
+      }
+      .panel-green > .panel-body {
+        background-color: #65c965;
+      }
+
+      .panel-red > .panel-heading {
+        background-color: #d04e50;
+        border-color: #ff6062;
+      }
+      .panel-red > .panel-body {
+        background-color: #ef5a5c;
+      }
