--- a/views/login.html
+++ b/views/login.html
@@ -7,7 +7,7 @@
 						<div class="panel-heading text-center" style="background-color:#1FA7D4 !important;height:90px">
 							<h2 style="color:#fff">ArtEvent - Login</h2><br/><br/>
 						</div>
-						<div class="panel-body" style="background:#3d483f !important"><!--panel-body-->
+						<div class="panel-body" style="background:#3d483f !important" align="center"><!--panel-body-->
 							<div class="row">
 								<div class="col-sm-12">
 									<br/>
