--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -1,11 +1,12 @@
 .card {
+  height: 220px;
   display: block;
-    margin-bottom: 20px;
-    line-height: 1.42857143;
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    transition: box-shadow .25s;
+  margin-bottom: 20px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  transition: box-shadow .25s;
 }
 .card:hover {
   box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
@@ -23,7 +24,7 @@
   transition: all .25s ease;
 }
 .card-content {
-  padding:15px;
+  padding:10px 10px 0px 10px;
   text-align:left;
 }
 .card-title {
