--- a/views/main.html
+++ b/views/main.html
@@ -81,10 +81,18 @@
 				<h2>Active Events</h2>
 			</div>
 			<div class="col-xs-12 col-sm-3 desktop-only">
-				<div class="row">
-					<div class="col-sm-12">
-						<h3>Ternding Events</h3>
-					</div>
+				<div class="single category">
+					<h3 class="side-title">Trending Events</h3>
+					<ul class="list-unstyled">
+						<li><a href="" title="">Business </a></li>
+						<li><a href="" title="">Technology </a></li>
+						<li><a href="" title="">Web </a></li>
+						<li><a href="" title="">Ecommerce </a></li>
+						<li><a href="" title="">Wordpress </a></li>
+						<li><a href="" title="">Android </a></li>
+						<li><a href="" title="">IOS </a></li>
+						<li><a href="" title="">Windows </a></li>
+					</ul>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-9">
