--- a/assets/css/event.css
+++ b/assets/css/event.css
@@ -1,20 +1,75 @@
-.post-content {
-	background: none repeat scroll 0 0 #FFffff;
-	opacity: 0.5;
-	margin: 0 auto;
-	margin-top: -54px;
-	text-align:center;
-	position: relative;
-	width:80%;
-
-	
+.fb-profile img.fb-image-lg{
+    z-index: 0;
+    width: 100%;
+    margin-bottom: 10px;
 }
-
-.thumbnail {
-	margin:0 auto;
-	text-align:center;
+.fb-profile{
+    display: flex;
 }
+.segment
+{
+    margin: -140px 0px 0px 0px;
+    background: white;
+}
+.nav-tabs { 
+    border-bottom: 2px solid #DDD; 
+}
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { 
+    border-width: 0; 
+}
+.nav-tabs > li > a { 
+    border: none; 
+    color: #666; 
+}
+.nav-tabs > li.active > a, .nav-tabs > li > a:hover { 
+    border: none; 
+    color: #4285F4 !important; 
+    background: transparent; 
+}
+.nav-tabs > li > a::after { 
+    content: ""; 
+    background: #4285F4; 
+    height: 2px; 
+    position: absolute; 
+    width: 100%; 
+    left: 0px; 
+    bottom: -1px; 
+    transition: all 250ms ease 0s; 
+    transform: scale(0); 
+}
+.nav-tabs > li.active > a::after, .nav-tabs > li:hover > a::after {
+    transform: scale(1);
+}
+.tab-nav > li > a::after { 
+    background: #21527d none repeat scroll 0% 0%; 
+    color: #fff; 
+}
+.tab-pane { 
+    padding: 15px 0; 
+}
+.tab-content{
+    padding:20px;
+}
+.event_details {
+    background: #FFF none repeat scroll 0% 0%; 
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3); 
+    margin-bottom: 30px; 
+    margin-top: 1%;
+}
+@media (max-width:768px)
+{
+    .fb-profile-text>h1{
+        font-weight: 700;
+        font-size:16px;
+    }
 
-.wrapper {
-	text-align:center;
+    .segment
+    {
+        margin: -90px 0px 0px 0px;
+        z-index: 9;
+        width: 100%; 
+    }
+    .event_details {
+        margin-top: 5%;
+    }    
 }
