--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -44,12 +44,53 @@
 .wrapper{
 	padding-top: 3.5% !important;
 }
+.single {
+	padding: 30px 15px;
+	background: #fcfcfc;
+	border: 1px solid #f0f0f0;
+}
+.single h3.side-title {
+	margin: 0;
+	margin-bottom: 10px;
+	padding: 0;
+	font-size: 20px;
+	color: #333;
+	text-transform: uppercase;
+}
+.single h3.side-title:after {
+	content: '';
+	width: 60px;
+	height: 1px;
+	background: #ff173c;
+	display: block;
+	margin-top: 6px;
+}
+
+.single ul {
+	margin-bottom: 0;
+}
+.single li a {
+	color: #666;
+	font-size: 14px;
+	text-transform: uppercase;
+	border-bottom: 1px solid #f0f0f0;
+	line-height: 40px;
+	display: block;
+	text-decoration: none;
+}
+.single li a:hover {
+	color: #ff173c;
+}
+.single li:last-child a {
+	border-bottom: 0;
+}
 @media (max-width: 767px) {
 	.navbar-center{
 		width: 100% !important
 	}
 	.navbar-header{
 		width: 100% !important;
+		margin: 0px !important;
 	}
 	.desktop-only{
 		display: none;
@@ -59,6 +100,6 @@
 		padding-top: 10px;
 	}
 	.wrapper{
-		padding-top:35% !important;
+		padding-top:30% !important;
 	}
 }
