--- a/views/event.html
+++ b/views/event.html
@@ -7,6 +7,7 @@
 						<img align="left" class="fb-image-lg" src="assets/images/1000x400.png" alt="Profile image example"/>
 					</div>
 			</div>
+			<div>
 			<div class="col-lg-12 col-sm-12">
 				<div class="segment well">
 					<div class="row">
@@ -26,8 +27,28 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-8">
-				<!-- Nav tabs -->
+			<div class="col-sm-4 col-sm-push-8">
+				<div class="row">
+					<div class="col-sm-12 event_details" style="padding: 40px;">
+						<a class="btn btn-block btn-success">
+							<strong>Participate</strong>
+						</a>
+						<br><br>
+						<a ng-href="#!/gallery" class="btn btn-block btn-primary">
+							<strong>Gallery</strong>
+						</a>
+						<br><br>
+						<button class="btn btn-block btn-warning">
+							<strong>Leader Board</strong>
+						</button>
+						<br><br>
+						<div class="cont">
+							Event ending date : <strong>09/OCT/2018</strong>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-8 col-sm-pull-4">
 				<div class="event_details">
 					<ul class="nav nav-tabs" role="tablist">
 						<li role="presentation" class="active">
@@ -44,37 +65,6 @@
 						</div>
 						<div role="tabpanel" class="tab-pane" id="prizes">
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="row">
-					<div class="col-sm-12 event_details" style="padding: 20px;">
-						<button href="#" class="btn btn-block btn-success">
-							<strong>Participate</strong>
-						</button>
-						<br><br>
-						<button class="btn btn-block btn-primary">
-							<strong>Gallery</strong>
-						</button>
-						<br><br>
-						<button class="btn btn-block btn-warning">
-							<strong>Leader Board</strong>
-						</button>
-						<br><br>
-						<div class="cont">
-							Event ending date : <strong>09/OCT/2018</strong>
-						</div>
-					</div>
-					<div class="col-sm-12 event_details">
-						<div class="card-content">
-							<h5 class="card-title">
-								Skils Required
-							</h5>
-						</div>
-						<div class="card-read-more" style="padding: 10px;">
-							<span class="label label-warning">Warning</span>
 						</div>
 					</div>
 				</div>
