--- a/views/profile.html
+++ b/views/profile.html
@@ -1,40 +1,51 @@
-<div class="content">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h3>Events</h3>
+<link href="assets/css/profile.css" rel="stylesheet">
+<div class="container">
+	<div class="row profile">
+		<div class="col-sm-3">
+			<div class="profile-sidebar">
+				<!-- SIDEBAR USERPIC -->
+				<div class="profile-userpic">
+					<img src="assets/images/400x400.png" class="img-responsive" alt="">
+				</div>
+				<!-- END SIDEBAR USERPIC -->
+				<!-- SIDEBAR USER TITLE -->
+				<div class="profile-usertitle">
+					<div class="profile-usertitle-name">
+						Marcus Doe
+					</div>
+					<div class="profile-usertitle-job">
+						Developer
+					</div>
+				</div>
+				<!-- END SIDEBAR USER TITLE -->
+				<!-- SIDEBAR BUTTONS -->
+				<div class="profile-userbuttons">
+					<button type="button" class="btn btn-success btn-sm">Follow</button>
+					<button type="button" class="btn btn-danger btn-sm">Message</button>
+				</div>
+				<!-- END SIDEBAR BUTTONS -->
+				<!-- SIDEBAR MENU -->
+				<div class="profile-usermenu">
+					<ul class="nav" role="tablist">
+						<li role="presentation" class="active">
+							<a href="#details" aria-controls="details" role="tab" data-toggle="tab">About Event</a>
+						</li>
+						<li role="presentation">
+							<a href="#prizes" aria-controls="prizes" role="tab" data-toggle="tab">Prizes</a>
+						</li>
+					</ul>
+				</div>
+				<!-- END MENU -->
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-sm-8" align="center">
-				<ul class="nav nav-pills nav-justified">
-					<li class="active">
-						<a data-toggle="tab" href="#applied">Applied</a>
-					</li>
-					<li>
-						<a data-toggle="tab" href="#all">All</a>
-					</li>
-					<li>
-						<a data-toggle="tab" href="#quiz">Quiz</a>
-					</li>
-					<li>
-						<a data-toggle="tab" href="#coming">Coming Soon</a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-sm-4">
-				<div class="card">
-					<div class="card-content">
-						<h5 class="card-title">
-								Bootstrap 3 Carousel FadeIn Out Effect
-						</h5>
-						<p class="">
-						</p>
+		<div class="col-sm-9">
+			<div class="profile-content">
+				<div class="tab-content">
+					<div role="tabpanel" class="tab-pane active" id="details">
+						
 					</div>
-					<div class="card-read-more">
-						<a href="" class="btn btn-link btn-block">
-							Edit
-						</a>
+					<div role="tabpanel" class="tab-pane" id="prizes">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
 					</div>
 				</div>
 			</div>
