--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -98,7 +98,7 @@
 
 /* Profile Content */
 .profile-content {
-  padding: 20px;
+  padding: 20px 0px 0px 0px;
   background: #fff;
   min-height: 460px;
 }
