--- a/views/events.html
+++ b/views/events.html
@@ -8,8 +8,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-sm-3" ng-repeat="event in events">
-<!--				<a class="card" ng-href="#!/event/{{event.id}}"> -->
-					<a class="card">
+				<a class="card" ng-href="#!/event/{{event.id}}">
 					<div class="img-card">
 						<img ng-src="{{event.img}}" />
 					</div>
@@ -22,7 +21,7 @@
 						</p>
 					</div>
 					<div class="card-read-more">
-						<div class="btn btn-link btn-block" ng-click="event.sayHello(event,$event)">
+						<div class="btn btn-link btn-block">
 							Read More
 						</div>
 					</div>
