--- a/views/main.html
+++ b/views/main.html
@@ -223,17 +223,20 @@
 
 				<h3>Company<span>logo</span></h3>
 
-				<p class="footer-links">
-					<a href="#">Home</a>
-					<br>
-					<a href="#">Products</a>
-					<br>
-					<a href="#">Pricing</a>
-					<br>
-					<a href="#">Contact</a>
+				<p class="footer-company-about">
+					<span>About the company</span>
+					Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
 				</p>
 
-				<p class="footer-company-name">Company Name &copy; 2018</p>
+				<div class="footer-icons">
+
+					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-github"></i></a>
+
+				</div>
+
 			</div>
 
 			<div class="footer-center">
@@ -256,20 +259,18 @@
 			</div>
 
 			<div class="footer-right">
-
-				<p class="footer-company-about">
-					<span>About the company</span>
-					Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+				<u><span>Site map</span></u>
+				<p class="footer-links">
+					<a href="#">Home</a>
+					<br>
+					<a href="#">Products</a>
+					<br>
+					<a href="#">Pricing</a>
+					<br>
+					<a href="#">Contact</a>
 				</p>
 
-				<div class="footer-icons">
-
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
-
-				</div>
+				<br><br><p class="footer-company-name">Company Name &copy; 2018</p>
 
 			</div>
 
