--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -95,7 +95,14 @@
 	right: 0;
 	min-height: 70px;
 }
-
+#preloader {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 99999;
+	overflow: visible;
+	background: url('../images/pre-loader.gif') #bbbbbb75 no-repeat center center;
+}
 @media (max-width: 767px) {
 	.navbar-center{
 		width: 100% !important
