--- a/views/event.html
+++ b/views/event.html
@@ -4,7 +4,7 @@
 		<div class="row nopadding">
 			<div class="col-lg-12 col-sm-12 nopadding">
 					<div class="fb-profile">
-						<img align="left" class="fb-image-lg" src="assets/images/1000x400.png" alt="Profile image example"/>
+						<img align="left" class="fb-image-lg" ng-src="{{event.img}}" alt="Profile image example"/>
 					</div>
 			</div>
 			<div>
@@ -12,15 +12,15 @@
 				<div class="segment well">
 					<div class="row">
 						<div class="col-sm-4">
-							<h4><strong>Event Name</strong></h4>
-							<h5>Host By:<strong>ASD</strong></h5>
+							<h4><strong>{{event.name}}</strong></h4>
+							<h5>Host By:<strong>{{event.host}}</strong></h5>
 						</div>
 						<div class="col-sm-4">
-							<h4>Start Date:<strong>10/Sep/18</strong></h4>
-							<h4>End Date: <strong>9/Oct/18</strong></h4>							
+							<h4>Start Date:<strong>{{event.start_date}}</strong></h4>
+							<h4>End Date: <strong>{{event.end_date}}</strong></h4>							
 						</div>
 						<div class="col-sm-4">
-							<h4>Status: <strong>Live</strong></h4>
+							<h4>Status: <strong>{{event.status}}</strong></h4>
 						</div>
 					</div>
 				</div>
@@ -30,7 +30,7 @@
 			<div class="col-sm-4 col-sm-push-8">
 				<div class="row">
 					<div class="col-sm-12 event_details" style="padding: 40px;">
-						<a class="btn btn-block btn-success">
+						<a class="btn btn-block btn-success" ng-show="'{{event.status}}'=='ongoing'">
 							<strong>Participate</strong>
 						</a>
 						<br><br>
@@ -38,10 +38,9 @@
 							<strong>Gallery</strong>
 						</a>
 						<br><br>
-						<button class="btn btn-block btn-warning">
+						<button class="btn btn-block btn-warning" ng-show="'{{event.status}}'=='finished'">
 							<strong>Leader Board</strong>
 						</button>
-						<br><br>
 						<div class="cont">
 							Event ending date : <strong>09/OCT/2018</strong>
 						</div>
